# iced-shadcn-ui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/iced-shadcn/: Cargo.toml
crates/iced-shadcn-ui/: Cargo.toml  README.md
crates/iced-shadcn-ui/src/: cli.rs  error.rs  main.rs  patch.rs  registry_load.rs
crates/iced-shadcn-ui/tests/: add_local.rs  list_local.rs
crates/iced-shadcn/src/: add.rs  cargo_merge.rs  cli.rs  config.rs  diff.rs  fetch.rs  list.rs  main.rs  patch.rs  registry.rs  registry_load.rs  render.rs
crates/iced-shadcn/tests/: add_scroll_area.rs  list_local.rs
docs/: contributing.md  installation.md  porting-guide.md  theming.md
docs/components/: avatar.md  badge.md  button.md  card.md  checkbox.md  icons.md  input.md  label.md  progress.md  scroll_area.md  separator.md  sidebar.md  skeleton.md  switch.md  table.md
docs/superpowers/specs/: 2026-07-05-iced-shadcn-ui-design.md
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/showcase/src/pages/: buttons.rs  data.rs  inputs.rs  layout.rs  mod.rs
examples/showcase/src/ui/: avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  icons.rs  input.rs  label.rs  mod.rs  progress.rs  scroll_area.rs  separator.rs  sidebar.rs  skeleton.rs  switch.rs  table.rs  theme.rs  utils.rs
registry/: registry.json
registry/styles/new-york/: avatar.rs.template  badge.rs.template  button.rs.template  card.rs.template  checkbox.rs.template  icons.rs.template  input.rs.template  label.rs.template  progress.rs.template  separator.rs.template  sidebar.rs.template  skeleton.rs.template  switch.rs.template  table.rs.template  theme.rs.template
