[package]
name = "iced-shadcn-ui"
version = "0.1.1"
edition = "2024"
description = "CLI to add shadcn/ui-inspired iced 0.14 components as copy-paste Rust source"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/iced-shadcn-ui"
homepage = "https://github.com/bengidev/iced-shadcn-ui"
repository = "https://github.com/bengidev/iced-shadcn-ui"
keywords = ["iced", "gui", "shadcn", "ui", "cli"]
categories = ["command-line-utilities", "gui"]

[[bin]]
name = "iced-shadcn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
