[package]
name = "iced-shadcn"
version = "0.1.0"
edition = "2024"
description = "Add shadcn/ui-inspired components to your iced project"
license = "MIT"
repository = "https://github.com/bengidev/iced-shadcn-ui"
keywords = ["iced", "gui", "shadcn", "ui", "widgets"]
categories = ["gui"]

[[bin]]
name = "iced-shadcn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
